<resources>
    <string name="app_name">Napster</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="google_map_key">AIzaSyDqGVU7zjONPSJSj-22AydiBS2H2BgyxyE</string>
    <string name="Login_here">Login Here</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="signup_here">Signup here.</string>
    <string name="password">Password</string>
    <string name="remember_pass">Remember password</string>
    <string name="signup">Signup to click!</string>
    <string name="enter_email">Enter your email address</string>
    <string name="enter_pass">Enter your password</string>
    <string name="enter_full_name">Enter your full name</string>
    <string name="enter_phone_num">Enter your phone number</string>
    <string name="give_rating">Give rating to apps</string>

    <string name="whatsapp">Whatsapp</string>
    <string name="facebook">Facebook</string>
    <string name="youtube">Youtube</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="linkedin">Linkedin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>